@@ -36,6 +36,8 @@ Version 1.3-svn:
       water.
     * Updated terrain: added peaks to the impassable mountains.
     * Items with a halo have their halo hidden when under a shroud.
+    * Units with a hide ability now properly show where they're hidden and
+      the mouseover also gives the right indication. 
 
   * Language and translations
     * Updated translations: British English, Catalan, Czech, Danish, Dutch,
