@@ -125,7 +125,7 @@ report generate_report(TYPE type, const gamemap& map, unit_map& units,
 		std::stringstream tooltip;
 		report res;
 
-		if(map.on_board(loc) && u->second.invisible(loc,units,teams)) {
+		if(map.on_board(mouseover) && u->second.invisible(mouseover,units,teams)) {
 			unit_status << "misc/invisible.png";
 			tooltip << _("invisible: ") << _("This unit is invisible. It cannot be seen or attacked by enemy units.");
 			res.add_image(unit_status,tooltip);
